monitoring/ingress-sonar.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonar
  namespace: sonar
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: "nginx"
  rules:
    - host: sonar.rateme-nextgen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonar
                port:
                  number: 9000
