monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  ingressClassName: gce
  rules:
    - host: monitoring.rateme-nextgen.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: monitoring-release-grafana
                port:
                  number: 80
  defaultBackend:
    service:
      name: monitoring-release-grafana
      port:
        number: 80
